fixed text gradient on safari

--- a/scss/_work.scss
+++ b/scss/_work.scss
@@ -70,9 +70,14 @@
                 margin-right: 30px;
                 border-radius: 20px;
                 border: 1px solid rgba(255, 92, 92, 0.25);
-                // box-shadow: 0px 2px 4px rgba(255, 92, 92, 0.2), 0px 4px 5px 5px rgba(255, 92, 92, 0.05),
-                //     0px 4px 4px rgba(255, 92, 92, 0.05);
+
                 background: #ffffff;
+
+                &:hover {
+                    box-shadow: 0px 2px 4px rgba(255, 92, 92, 0.2), 0px 4px 5px 5px rgba(255, 92, 92, 0.05),
+                         0px 4px 4px rgba(255, 92, 92, 0.05);
+                }
+
                 .use-img {
                     width: 290px;
                     height: 200px;
@@ -81,9 +86,10 @@
                 }
                 .use-text {
                     padding: 20px;
-                    background: linear-gradient(180deg, rgba(0,0,0,1) 70%, rgba(0,0,0,0) 100%);
-                    -webkit-background-clip: text;
-                    -webkit-text-fill-color: transparent;
+
+                    -webkit-mask-image: linear-gradient(180deg, rgba(0,0,0,1) 65%, transparent 100%);
+                    mask-image: linear-gradient(180deg, rgba(0,0,0,1) 65%, transparent 100%);
+                    
                     height: 210px;
                     overflow-y: hidden;
                     .use-title {
